[gd_scene load_steps=7 format=2]

[ext_resource path="res://Theme/default/theme.tres" type="Theme" id=1]
[ext_resource path="res://mocraClassic/notifications/background.png" type="Texture2D" id=2]
[ext_resource path="res://mocraClassic/notifications/credits/add.png" type="Texture2D" id=3]
[ext_resource path="res://mocraClassic/notifications/credits/preset.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "default"
tracks/0/type = "bezier"
tracks/0/path = NodePath("backgroundTexture:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"points": PackedFloat32Array(  ),
"times": PackedFloat32Array(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("backgroundTexture:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"points": PackedFloat32Array(  ),
"times": PackedFloat32Array(  )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("backgroundTexture:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"points": PackedFloat32Array(  ),
"times": PackedFloat32Array(  )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("backgroundTexture:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PackedFloat32Array( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 1 )
}

[sub_resource type="Animation" id=2]
resource_name = "display"
tracks/0/type = "bezier"
tracks/0/path = NodePath("backgroundTexture:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PackedFloat32Array( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("backgroundTexture:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PackedFloat32Array( 500, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("backgroundTexture:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PackedFloat32Array( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PackedFloat32Array( 0, 1 )
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1420.0
offset_bottom = -880.0
custom_minimum_size = Vector2( 500, 200 )
theme = ExtResource( 1 )
script = ExtResource( 4 )

[node name="backgroundTexture" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
offset_left = 500.0
offset_right = 1000.0
offset_bottom = 200.0
texture = ExtResource( 2 )

[node name="iconTexture" type="TextureRect" parent="backgroundTexture"]
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
texture = ExtResource( 3 )

[node name="creditLabel" type="Label" parent="backgroundTexture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -42.0
offset_right = 171.0
offset_bottom = 43.0
text = "-50000"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 1 )
anims/display = SubResource( 2 )
